language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_annotation.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_annotation.move:7:26 ───
   │
 7 │         ignore((abort 0: CupC<R>));
   │                          ^^^^^^^ 'copy' constraint not satisifed
   ·
 7 │         ignore((abort 0: CupC<R>));
   │                               - The type '0x8675309::M::R' does not have the ability 'copy'
   ·
 4 │     struct R {}
   │            - To satisify the constraint, the 'copy' ability would need to be added here
   ·
 2 │     struct CupC<T: copy> {}
   │                    ---- 'copy' constraint declared here
   │

