language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_annotation.move
module 0x8675309::M {
    struct CupC<T: copy> {}
    struct C {}
    struct R {}

    fun foo() {
        ignore((abort 0: CupC<R>));
    }

    fun ignore<T>(x: T) {

    }

}
